syntax = "proto3";

option csharp_namespace = "Zorf";

package greet;

// The greeting service definition.
service ZorfService 
{
  // Sends a greeting
  rpc DoCommand (ZorfCommand) returns (ZorfReply);
}

// The request message containing the user's name.
message ZorfCommand {
  string command = 1;
}

// The response message containing the greetings.
message ZorfReply {
  string message = 1;
}
